spade-tests/src/snapshots/spade_tests__integration__trait_tests__entities_in_impl_blocks_are_graceuflly_disallowed.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

impl X {
    entity a(self) -> bool {true}
}


error: Entities are not allowed in impl blocks
  ┌─ testinput:4:5
  │
4 │     entity a(self) -> bool {true}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Not allowed here
  │
  = Did you intend to define a function


